[project]
name = "daily-trace-gases"
version = "0.1.0"
description = "Official repository for Fully Automatic Trace Gas Plume Detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthaccess>=0.17.0",
    "geojson>=3.2.0",
    "geopandas>=1.1.3",
    "georeader-spaceml==1.5.9",
    "gitpython>=3.1.49",
    "matplotlib>=3.10.9",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "pyarrow>=24.0.0",
    "pysolar>=0.13",
    "rasterio>=1.5.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "segmentation-models-pytorch>=0.5.0",
    "spectral>=0.24",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
